Nuevas vistas de usuario

--- a/views/aprende_libros.ejs
+++ b/views/aprende_libros.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/head.ejs')%>
+<%-include('plantillas/head.ejs')%>
 
 <div class="row">
     <div class="col-2">
@@ -25,5 +25,4 @@
     </div>    
 <%}%>
 
-
-<%-include('partials/fooder.ejs')%>
+<%-include('plantillas/fooder.ejs')%>
