--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/head.ejs')%>
+<%-include('plantillas/head.ejs')%>
 
 <div class="row align-content-center justify-content-center vh-100">
     
@@ -37,4 +37,5 @@
     </script>
 </div>
 
-<%-include('partials/fooder.ejs')%>
+
+<%-include('plantillas/fooder.ejs')%>
