--- a/views/aprende.ejs
+++ b/views/aprende.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/head.ejs')%>
+<%-include('plantillas/head.ejs')%>
 
 <div class="row">
     <div class="col-2">
@@ -30,4 +30,5 @@
 <%}%>
 
 
-<%-include('partials/fooder.ejs')%>
+
+<%-include('plantillas/fooder.ejs')%>
