--- a/views/conocenos.ejs
+++ b/views/conocenos.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/head.ejs')%>
+<%-include('plantillas/head.ejs')%>
 
 <div class="row align-content-center justify-content-center vh-100">
     <div class="row">
@@ -40,4 +40,5 @@
     </div>
 </div>
 
-<%-include('partials/fooder.ejs')%>
+
+<%-include('plantillas/fooder.ejs')%>
