--- a/views/registros_empresa.ejs
+++ b/views/registros_empresa.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/head.ejs')%>
+<%-include('plantillas/head.ejs')%>
 
 <div class="row align-content-center justify-content-center vh-100">
     <div class="row">
@@ -50,4 +50,5 @@
 
 </div>
 
-<%-include('partials/fooder.ejs')%>
+
+<%-include('plantillas/fooder.ejs')%>
