vistas de usuario y empresa

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,45 @@
 <%-include('plantillas/head.ejs')%>
 
-<div class="contenido">
-    <h1>Novedades Recienes</h1>
-    <div class="novedades"> 
+<div class="container">
+  <div class="row">
+    <div class="card" style="width: 100%; height: 50px;">
+      <div class="card-body">
+        <h5 class="card-title">Novedades del dia</h5>
+      </div>
     </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="img/empresas/coca_cola.png" class="d-block w-100" alt="Anuncio 1">
+          </div>
+
+          <div class="carousel-item">
+            <img src="img/empresas/coca_cola.png" class="d-block w-100" alt="Anuncio 1">
+          </div>
+
+          <div class="carousel-item">
+            <img src="img/empresas/coca_cola.png" class="d-block w-100" alt="Anuncio 1">
+          </div>
+
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      
+      
+    </div>
+  </div>
+
 </div>
-
-
 <%-include('plantillas/fooder.ejs')%>
