--- a/views/inicio/aprende.ejs
+++ b/views/inicio/aprende.ejs
@@ -1,4 +1,4 @@
-<%-include('plantillas/head.ejs')%>
+<%-include('../plantillas/head.ejs')%>
 
 <div class="row">
     <div class="col-2">
@@ -31,4 +31,4 @@
 
 
 
-<%-include('plantillas/fooder.ejs')%>
+<%-include('../plantillas/fooder.ejs')%>
