--- a/views/plantillas/fooder.ejs
+++ b/views/plantillas/fooder.ejs
@@ -1,23 +1,51 @@
-    <div class="pie">
-        <div class="redes">
-            <a href="https://www.facebook.com">
-                <img src="img/facebook.png">
+<footer class="text-white py-4" style="background-color: black;">
+    <div class="container">
+        <nav class="row">
+            <a href="#" class="col-3 text-reset text-uppercase d-flex aling-items-center">
+                <img src="img/Icono2.png" alt="xd" style="width: 30px; height: 30px;">
+                vcode
             </a>
-            <a href="https://www.instagram.com/">
-                <img src="img/instagram.png">
-            </a>
-            <a href="">
-                <img src="img/whatsapp.png">
-            </a>
-            <a href="https://twitter.com">
-                <img src="img/gorjeo.png">
-            </a>
-        </div>
-        <footer>
-            <h1>© Copyright 2022 VCode - Todos los Derechos Reservados</h1>
-            <h1>Última actualización: 04/03/2022</h1>
-        </footer>
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase">
+                    Tecnologico Campus Cuautla
+                </li>
+                <li><a href="https://www.cuautla.tecnm.mx/" target="_blank" rel="noopener noreferrer" class="text-reset">Pagina oficial</a></li>
+                <li><a href="http://sii.cuautla.tecnm.mx/" target="_blank" rel="noopener noreferrer" class="text-reset">SII</a></li>
+                <li><a href="https://educacion.cuautla.tecnm.mx/login/index.php" target="_blank" rel="noopener noreferrer" class="text-reset">Moodle</a></li>
+            </ul>
+            
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase">
+                    Mas informacion
+                </li>
+                <li>
+                    <a href="#" class="text-reset">Guia de usuario</a>
+                </li>
+                <li>
+                    <a href="#" class="text-reset"></a>
+                </li>
+                <li>
+                    <a href="#" class="text-reset">Link 1</a>
+                </li>
+                <li>
+                    <a href="#" class="text-reset">Link 1</a>
+                </li>
+            </ul>
+
+            <ul class="col-3 list-unstyled">
+                <li class="font-weight-bold text-uppercase">
+                    Redes sociales
+                </li>
+                <li class="d-flex justify-content-between">
+                    <a href="#" class="text-reset"><img src="img/facebook.png"  target="_blank" rel="noopener noreferrer" alt="face" style="width: 30px;"></a>
+                    <a href="#" class="text-reset"><img src="img/gorjeo.png"  target="_blank" rel="noopener noreferrer" alt="" style="width: 30px;"></a>
+                    <a href="#" class="text-reset"><img src="img/instagram.png"  target="_blank" rel="noopener noreferrer" alt=""style="width: 30px;"></a>
+                    <a href="#" class="text-reset"><img src="img/whatsapp.png"  target="_blank" rel="noopener noreferrer" alt="" style="width: 30px;"></a>
+                </li>
+            </ul>
+
+        </nav>
     </div>
-</div>
+</footer>
 </body>
 </html>
