--- a/views/plantillas/headU.ejs
+++ b/views/plantillas/headU.ejs
@@ -14,11 +14,11 @@
     <title>VCode</title>
 </head>
 <body>
-    <div >
         <div class="cabecera">
             <h1><%=title%></h1>
             <ul>
                 <li class="btn" ><a href="/" style="color: white;">inicio</a></li>
                 <li class="btn" ><a href="conocenos" style="color: white;">conocenos</a></li>
+                <li class="btn" ><a href="login" style="color: white;">cerrar sesion</a></li>
             </ul>
         </div>
