--- a/views/inicio/conocenos.ejs
+++ b/views/inicio/conocenos.ejs
@@ -1,4 +1,4 @@
-<%-include('plantillas/head.ejs')%>
+<%-include('../plantillas/head.ejs')%>
 
 <div class="row align-content-center justify-content-center vh-100">
     <div class="row">
@@ -41,4 +41,4 @@
 </div>
 
 
-<%-include('plantillas/fooder.ejs')%>
+<%-include('../plantillas/fooder.ejs')%>
