vistas de empresas y ususarios

--- a/views/empresas/panel_empresa.ejs
+++ b/views/empresas/panel_empresa.ejs
@@ -35,23 +35,29 @@
                 <div class="row p-1">
                     <p>
                         <button class="btn btn-primary w-100" type="button" data-bs-toggle="collapse" data-bs-target="#seccion_aprende" aria-expanded="false" aria-controls="collapseExample">
-                            Para tu aprendizaje.
+                            Para el aprendizaje.
                         </button>
                     </p>
                     <div class="collapse" id="seccion_aprende">
                         <div class="card card-body">
                             <ul class="list-unstyled fw-normal pb-1 small">
                                 <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
-                                        Ver cursos
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="publicar-curso" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                    <a href="publicar-curso-e" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
                                         Publicar un curso
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="publicar-proyecto-libre-e" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                        publicar proyecto libre
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="proyectos-libres-e" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                        ver los proyctos libres
+                                    </a>
+                                </li>
                             </ul>
+                            
                         </div>
                     </div>
                 </div>
@@ -59,24 +65,19 @@
                 <div class="row p-1">
                     <p>
                         <button class="btn btn-primary w-100" type="button" data-bs-toggle="collapse" data-bs-target="#seccion_exp" aria-expanded="false" aria-controls="collapseExample">
-                            Para tu experiencia
+                            Para generar experiencia
                         </button>
                     </p>
                     <div class="collapse" id="seccion_exp">
                         <div class="card card-body">
                             <ul class="list-unstyled fw-normal pb-1 small">
                                 <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
-                                        crear ofertas laborales
+                                    <a href="publicar-ofertas-laborales" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                        publicar ofertas laborales
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
-                                        publicar curso
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                    <a href="publicar-proyecto-e" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
                                         publicar proyecto
                                     </a>
                                 </li>
@@ -84,31 +85,6 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="row p-1">
-                    <p>
-                        <button class="btn btn-primary w-100" type="button" data-bs-toggle="collapse" data-bs-target="#seccion_prac" aria-expanded="false" aria-controls="collapseExample">
-                            Para que practiques mientras aprendes
-                        </button>
-                    </p>
-                    <div class="collapse" id="seccion_prac">
-                        <div class="card card-body">
-                            <ul class="list-unstyled fw-normal pb-1 small">
-                                <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
-                                        apoyar proyectos libres
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
-                                       crear proyecto libre
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-    
             </div>
         </div>
     </div>
