--- a/views/formularios/subir_curso_e.ejs
+++ b/views/formularios/subir_curso_e.ejs
@@ -25,7 +25,7 @@
               </table>
         </div>
         <div class="col-lg-6">
-            <form action="compartir-curso" method="post">
+            <form action="compartir-curso-e" method="post">
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-3">
@@ -61,7 +61,7 @@
                     <input type="submit" class="btn btn-primary m-1" >
                 </center>
                 <center>
-                    <a href="panel-usuario" class="btn">Volver</a>
+                    <a href="panel-empresa" class="btn">Volver</a>
                 </center>
             </form>
         </div>
