--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
                     <label for="">Para empresas</label>
                 </center>
                 <center>
-                    <a href="empresa"> Nueva cuenta para empresas</a>
+                    <a href="peticion-empresa"> Nueva cuenta para empresas</a>
                 </center>
             </form>                
         </div>
