--- a/views/usuarios/panel_usuario.ejs
+++ b/views/usuarios/panel_usuario.ejs
@@ -66,12 +66,12 @@
                         <div class="card card-body">
                             <ul class="list-unstyled fw-normal pb-1 small">
                                 <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                    <a href="ofertas-laborales" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
                                         buscar ofertas laborales
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="aprende" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
+                                    <a href="aprendeE" class="btn btn-dark d-inline-flex align-items-center rounded w-100">
                                         ver cursos publicados por empresas
                                     </a>
                                 </li>
